app/assets/stylesheets/api/master.scss
// RESET
div, section, a, p, img, body, h1, h2, h3, h4, input, div, footer, form, main, section, header, ul, li, button {
  margin: 0;
  padding: 0;
  font-family: Helvetica, Arial, sans-serif;
  box-sizing: border-box;
}

button {
  font-size: inherit;
}

a {
  text-decoration: none;
  cursor: pointer;
}

li {
  list-style: none;
}

input {
  outline: none;
}


// Page layout
#main {
  min-height: 100vh;
  background-color: #02C8F2;
}

// Header

header {
  height: 5vh;
  display: flex;
  margin-bottom: 5px;
  justify-content: space-between;
  align-items: center;
  background: #069DD8;
  position: fixed;
  width: 100%;
}

#session-header {
  text-align: center;
  margin-bottom: 10px;
}


#nav-logo {
  height: 5vh;
}

.session-links * {
  margin: 10px;
  padding: 5px;
  border-radius: 2px;
  transition: 1.5s;
}

.session-links a:hover {
  transform: scale(1.25, 1.25);
  transition: 1.5s;
}

.session-links button:hover {
  transform: scale(1.25, 1.25);
  transition: 1.5s;
}

#signup {
  color: #3498db;
  background-color: white;
}

.login {
  background-color: #0f79bf;
  color: white;
  border: none;
}

.login:hover {
  transform: scale(1.25, 1.25);
  transition: 1.5s;
}

#logout {
  border: none;
  color: #3498db;
  background-color: white;
}

#home {
  color: black;
}

// Body

#body {
  padding-top: 7vh;
  min-height: 95vh;
  padding-top: 6vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

// Errors

#errors {
  background-color: #b94a48;
  font-size: 17px;
  border: 1px #b94a48;
  border-radius: 3px;
  text-align: center;
}


.flex {
  display: flex;
}

.end {
  justify-content: flex-end;
}

// Container Login/Logout and find weather

.form-container {
  height: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.form {
  min-width: 350px;
  max-width: 400px;
  max-height: 310px;
  border: 1px solid white;
  border-radius: 5px;
  padding: 15px;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: auto;
  overflow-border: 10px;
}

.height-auto {
  height: auto;
}

.height-set {
  height: 310px;
}

.form input {
  width: 100%;
  border-radius: 6px;
  padding: 5px;
  margin-bottom: 15px;
  font-size: 14px;
}

.form p {
  text-align: center;
}

.submit-button {
  border: none;
  background-color: #0379C1;
  transition: 1.5s;
  font-size: 14px;
  cursor: pointer;
}

.submit-button:hover {
  background-color: #095384;
  transition: 1.5s;
}

// Weather

.week-container {
  padding: 15px;
  display: flex;
  width: 100vw;
  font-size: 12px;
}

.daily-weather {
  width: calc(100vw / 8);
  box-sizing: border-box;
  background-color: white;
  box-shadow: 0 3px 2px #D7D7D7;
  margin: 2px;
  padding: 5px;
  border-radius: 6px;
}

.daily-weather p {
  margin-bottom: 2px;
}

.daily-weather img {
  width: 100%;
  height: auto;
}

.centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}

.date {
  text-align: center;
  font-size: 15px;
}
.summary {
  text-align: center;
}

// Weather SVG
svg {
  margin-top: 15px;
  box-sizing: border-box;
  box-shadow: 0 1px 2px #D7D7D7;
  font: 20px sans-serif;
  background: white;
  border-radius: 10px;
}

.axis {
  font-size: 80%;
}

// Searches
#search-history {
  margin-left: 10px;
}

.search-li {
  border: 1px solid black;
  border-radius: 10px;
  margin-top: 10px;
  padding: 5px;
  cursor: pointer;
  transition: 1s;
  font-size: 14px;
}

.search-li:hover {
  background-color: #9e9797;
  transition: 1s;
}
.search-li p {
  margin-right: 10px;
}

// Footer

footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid white;
  padding: 0 20px;
  height: 5vh;
}

.footer-links a {
  margin-left: 20px;
  color: black;
}


@media screen and (max-width: 800px) {
  .axis {
    font-size: 30%;
  }
  footer {
    font-size: 8px;
  }
  header {
    width: 100vw;
  }
  .week-container {
    font-size: 40%;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0px;
  }
  .daily-weather {
  width: calc(100vw / 2.2);
  margin: 0px 0px 10px 10px;
  }
  .form {
    min-width: inherit;
    max-width: none;
  }
  #body {
    padding-left: 10px;
    padding-right: 10px;
  }
  svg {
    margin-bottom: 10px;
  }
}

